réorga par dossier

--- a/webcam.html
+++ b/webcam.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Station météo - Météo Croisic</title>
+    <title>Webcam - Météo Croisic</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <!-- Bannière avec titre -->
     <header>
-        <h1><a href="html/index.html" style="color: white; text-decoration: none;">Météo au Croisic</a></h1>
+        <h1><a href="index.html" style="color: white; text-decoration: none;">Météo au Croisic</a></h1>
     </header>
 
     <!-- Conteneur pour le menu -->
     <div id="menu-container"></div>
 
-    <!-- Contenu principal de la page Station météo -->
+    <!-- Contenu principal de la page Webcam -->
     <main>
-        <h2>Données en direct de la Station météo</h2>
-        <p>Les données de la station météo seront affichées ici.</p>
+        <h2>Webcam en direct</h2>
+        <p>Le flux vidéo de la webcam sera affiché ici.</p>
     </main>
 
     <!-- Pied de page -->
