--- a/previsions.html
+++ b/previsions.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Bannière avec titre -->
     <header>
-        <h1><a href="html/index.html" style="color: white; text-decoration: none;">Météo au Croisic</a></h1>
+        <h1><a href="index.html" style="color: white; text-decoration: none;">Météo au Croisic</a></h1>
     </header>
 
     <nav id="menu-container"></nav>
