ajout d'une ligne weather

--- a/previsions.html
+++ b/previsions.html
@@ -25,9 +25,9 @@
             <table class="weather-table">
                 <thead>
                     <tr id="days-row">
-                        <th rowspan="2">Paramètres</th> <!-- Fusion sur 2 lignes -->
+                        <th rowspan="2">Paramètres</th>
                     </tr>
-                    <tr id="hours-row"></tr> <!-- Ligne des heures sans la cellule Paramètres -->
+                    <tr id="hours-row"></tr>
                 </thead>
                 <tbody>
                     <tr id="temperature-row">
@@ -44,6 +44,9 @@
                     </tr>
                     <tr id="pressure-row">
                         <td>Pression (hPa)</td>
+                    </tr>
+                    <tr id="weather-row">
+                        <td>Temps</td>
                     </tr>
                 </tbody>
             </table>
