init direction vent

--- a/previsions.html
+++ b/previsions.html
@@ -42,6 +42,9 @@
                     <tr id="wind-gust-row">
                         <td>Vent rafales (km/h)</td>
                     </tr>
+                    <tr id="wind-direction-row">
+                        <td>Direction vent</td>
+                    </tr>
                     <tr id="pressure-row">
                         <td>Pression (hPa)</td>
                     </tr>
