--- a/previsions.html
+++ b/previsions.html
@@ -65,10 +65,10 @@
                 </thead>
                 <tbody>
                     <tr id="temperature-min-7d-row">
-                        <td>Température (°C)</td>
+                        <td>Température min (°C)</td>
                     </tr>
                     <tr id="temperature-max-7d-row">
-                        <td>Température (°C)</td>
+                        <td>Température max (°C)</td>
                     </tr>
                     <tr id="rain-7d-row">
                         <td>Précipitations (mm)</td>
