--- a/previsions.html
+++ b/previsions.html
@@ -64,6 +64,12 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <tr id="sunrise">
+                        <td>Lever du soleil</td>
+                    </tr>
+                    <tr id="sunset">
+                        <td>Coucher du soleil</td>
+                    </tr>
                     <tr id="temperature-min-7d-row">
                         <td>Température min (°C)</td>
                     </tr>
@@ -72,6 +78,9 @@
                     </tr>
                     <tr id="rain-7d-row">
                         <td>Précipitations (mm)</td>
+                    </tr>
+                    <tr id="weather-7d-row">
+                        <td>Temps</td>
                     </tr>
                 </tbody>
             </table>
