ajout description du jour

--- a/previsions.html
+++ b/previsions.html
@@ -82,6 +82,9 @@
                     <tr id="weather-7d-row">
                         <td>Temps</td>
                     </tr>
+                    <tr id="summary-7d-row">
+                        <td>Résumé</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
