--- a/previsions.html
+++ b/previsions.html
@@ -49,7 +49,7 @@
                         <td>Pression (hPa)</td>
                     </tr>
                     <tr id="weather-24h-row">
-                        <td>Temps</td>
+                        <td>Ciel</td>
                     </tr>
                 </tbody>
             </table>
@@ -61,12 +61,12 @@
                 <thead>
                     <tr>
                         <th>Jour</th>
-                        <th>Lever du soleil</th>
-                        <th>Coucher du soleil</th>
-                        <th>Température max (°C)</th>
+                        <th>Lever soleil</th>
+                        <th>Coucher soleil</th>
                         <th>Température min (°C)</th>
+                        <th>Température max (°C)</th>
                         <th>Précipitations (mm)</th>
-                        <th>Temps</th>
+                        <th>Ciel</th>
                         <th>Résumé</th>
                     </tr>
                 </thead>
