--- a/previsions.html
+++ b/previsions.html
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Prévisions météo pour Le Croisic : précipitations, températures, vent, etc. Consultez la météo pour les prochaines 24 heures et les 7 prochains jours.">
+    <link rel="icon" href="icons/Le_Croisic_logo.png" type="image/png">
     <title>Prévisions - Météo Croisic</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <!-- Bannière avec titre -->
     <header>
-        <h1><a href="index.html" style="color: white; text-decoration: none;">Météo au Croisic</a></h1>
+        <h1><a href="index.html" class="header-link">Météo au Croisic</a></h1>
     </header>
 
     <nav id="menu-container"></nav>
 
     <main>
         <div>
-            <h3>Précipitations dans l'heure</h3>
+            <h2>Précipitations dans l'heure</h2>
             <canvas id="precipitation-chart"></canvas>
         </div>
 
         <div>
-            <h3>Météo pour les prochaines 24h</h3>
+            <h2>Météo pour les prochaines 24h</h2>
             <table class="weather-table">
                 <thead>
                     <tr id="days-24h-row">
@@ -56,7 +57,7 @@
         </div>
 
         <div>
-            <h3>Météo pour les 7 prochains jours</h3>
+            <h2>Météo pour les 7 prochains jours</h2>
             <table class="weather-table">
                 <thead>
                     <tr>
@@ -87,9 +88,9 @@
     <script src="js/menu.js"></script>
 
     <!-- Script pour charger les données provenant d'OpenWeather API -->
-    <script src="js/openweatherapi.js"></script>
+    <script src="js/openweatherapi.js" defer></script>
 
     <!-- Script pour insérer un graphique -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
 </body>
 </html>
