aspect tableau quotidien

--- a/previsions.html
+++ b/previsions.html
@@ -58,7 +58,7 @@
 
         <div>
             <h2>Météo pour les 7 prochains jours</h2>
-            <table class="weather-table">
+            <table class="weather-table weather-table-7d">
                 <thead>
                     <tr>
                         <th>Jour</th>
