aspect tableau quotidien

--- a/previsions.html
+++ b/previsions.html
@@ -64,9 +64,9 @@
                         <th>Jour</th>
                         <th>Lever soleil</th>
                         <th>Coucher soleil</th>
-                        <th>Température min (°C)</th>
-                        <th>Température max (°C)</th>
-                        <th>Précipitations (mm)</th>
+                        <th>Temp min (°C)</th>
+                        <th>Temp max (°C)</th>
+                        <th>Pluie (mm)</th>
                         <th>Ciel</th>
                         <th>Résumé</th>
                     </tr>
