aspect tableau quotidien

--- a/previsions.html
+++ b/previsions.html
@@ -62,11 +62,11 @@
                 <thead>
                     <tr>
                         <th>Jour</th>
-                        <th>Lever soleil</th>
-                        <th>Coucher soleil</th>
-                        <th>Temp min (°C)</th>
-                        <th>Temp max (°C)</th>
-                        <th>Pluie (mm)</th>
+                        <th>Lever<br>soleil</th>
+                        <th>Coucher<br>soleil</th>
+                        <th>Temp min<br>(°C)</th>
+                        <th>Temp max<br>(°C)</th>
+                        <th>Pluie<br>(mm)</th>
                         <th>Ciel</th>
                         <th>Résumé</th>
                     </tr>
