--- a/previsions.html
+++ b/previsions.html
@@ -16,10 +16,10 @@
     <nav id="menu-container"></nav>
 
     <main>
-        <div>
+        <!--<div>
             <h2>Précipitations dans l'heure</h2>
             <canvas id="precipitation-chart"></canvas>
-        </div>
+        </div>-->
 
         <div>
             <h2>Météo pour les prochaines 24h</h2>
