--- a/index.html
+++ b/index.html
@@ -8,16 +8,31 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div id="header-container"></div>
+    <header class="site-header">
+        <div class="logo-title">
+            <img src="/icons/logos/Le_Croisic_logo.png" alt="Logo Le Croisic" class="logo">
+            <h1>Météo Croisic</h1>
+        </div>
+    </header>
 
-    <nav id="menu-container"></nav>
+    <nav class="site-nav">
+        <ul class="nav-links">
+            <li><a href="/">Accueil</a></li>
+            <li><a href="/previsions.html">Prévisions</a></li>
+            <li><a href="/archives.html">Archives</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+        </ul>
+    </nav>
 
     <main>
         <h2>Bienvenue sur le site météo du Croisic</h2>
         <p>Ici, vous trouverez toutes les informations météo locales en temps réel.</p>
     </main>
 
-    <div id="footer-container"></div>
+    <footer class="site-footer">
+        <p>&copy; ${new Date().getFullYear()} Météo Croisic · Données fournies par Météo France</p>
+        <p><a href="/mentions-legales.html">Mentions légales</a></p>
+    </footer>
 
     <script src="/js/header.js" defer></script>
     <script src="/js/menu.js" defer></script>
