--- a/pages/menu.html
+++ b/pages/menu.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class ="site-nav">
     <ul>
         <li><a href="/pages/previsions-meteo.html">Prévisions météo</a></li>
         <li><a href="/pages/marees.html">Infos marées</a></li>
