--- a/pages/header.html
+++ b/pages/header.html
@@ -1,4 +1,4 @@
-<header>
+<header class="site-header">
     <a href="/index.html">
         <img src="/icons/logos/Le_Croisic_logo.png" alt="Logo"
             style="width: 70px; height: auto; margin-right: 20px; vertical-align: middle;">
