css header menu footer

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -1,9 +1,11 @@
-<nav class ="site-nav">
-    <ul>
-        <li><a href="/pages/previsions-meteo.html">Prévisions météo</a></li>
-        <li><a href="/pages/marees.html">Infos marées</a></li>
-        <li><a href="/pages/station-meteo.html">Station météo</a></li>
-        <li><a href="/pages/webcam.html">Webcam</a></li>
-        <li><a href="/pages/climat-croisic.html">Climat Croisic</a></li>
-    </ul>
-</nav>
+document.getElementById('menu-container').innerHTML = `
+    <nav class ="site-nav">
+        <ul>
+            <li><a href="/pages/previsions-meteo.html">Prévisions météo</a></li>
+            <li><a href="/pages/marees.html">Infos marées</a></li>
+            <li><a href="/pages/station-meteo.html">Station météo</a></li>
+            <li><a href="/pages/webcam.html">Webcam</a></li>
+            <li><a href="/pages/climat-croisic.html">Climat Croisic</a></li>
+        </ul>
+    </nav>
+`;
