css header menu footer

--- a/pages/footer.html
+++ b/pages/footer.html
@@ -1,3 +1,6 @@
-<footer class="site-footer">
-    <a href="/pages/mentions-legales.html">Mentions légales</a>
-</footer>
+document.getElementById('footer-container').innerHTML = `
+    <footer class="site-footer">
+        <p>&copy; ${new Date().getFullYear()} Météo Croisic · Données fournies par Météo France</p>
+        <p><a href="/pages/mentions-legales.html">Mentions légales</a></p>
+    </footer>
+`;
