--- a/pages/menu.html
+++ b/pages/menu.html
@@ -1,6 +1,6 @@
 document.getElementById('menu-container').innerHTML = `
-    <nav class ="site-nav">
-        <ul>
+    <nav class="site-nav">
+        <ul class="nav-links">
             <li><a href="/pages/previsions-meteo.html">Prévisions météo</a></li>
             <li><a href="/pages/marees.html">Infos marées</a></li>
             <li><a href="/pages/station-meteo.html">Station météo</a></li>
