page station météo

--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="icon" href="/icons/logos/Le_Croisic_logo.png" type="image/png">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body>
     <div id="header-container"></div>
 
@@ -14,7 +16,14 @@
 
     <main>
         <h2>Données en direct de la Station météo</h2>
-        <p>Les données de la station météo seront affichées ici.</p>
+        <section class="meteo-grid">
+            <div class="meteo-bloc">Température</div>
+            <div class="meteo-bloc">Pression</div>
+            <div class="meteo-bloc">Humidité</div>
+            <div class="meteo-bloc">Vent</div>
+            <div class="meteo-bloc">Lumière</div>
+            <div class="meteo-bloc">Pluviométrie</div>
+        </section>
     </main>
 
     <div id="footer-container"></div>
