--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -17,12 +17,12 @@
     <main>
         <h2>Données en direct de la Station météo</h2>
         <section class="meteo-grid">
-            <div class="meteo-bloc">Température</div>
-            <div class="meteo-bloc">Pression</div>
-            <div class="meteo-bloc">Humidité</div>
-            <div class="meteo-bloc">Vent</div>
-            <div class="meteo-bloc">Lumière</div>
-            <div class="meteo-bloc">Pluviométrie</div>
+            <div class="meteo-bloc" id="temperature">Température : ...</div>
+            <div class="meteo-bloc" id="pression">Pression : ...</div>
+            <div class="meteo-bloc" id="humidite">Humidité : ...</div>
+            <div class="meteo-bloc" id="vent">Vent : ...</div>
+            <div class="meteo-bloc" id="lumiere">Lumière : ...</div>
+            <div class="meteo-bloc" id="pluie">Pluviométrie : ...</div>
         </section>
     </main>
 
@@ -31,5 +31,6 @@
     <script src="/js/header.js" defer></script>
     <script src="/js/menu.js" defer></script>
     <script src="/js/footer.js" defer></script>
+    <script src="/js/station.js" defer></script>
 </body>
 </html>
