page station météo

--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -31,6 +31,6 @@
     <script src="/js/header.js" defer></script>
     <script src="/js/menu.js" defer></script>
     <script src="/js/footer.js" defer></script>
-    <script src="/js/station.js" defer></script>
+    <script src="/js/station-meteo.js" defer></script>
 </body>
 </html>
