--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -17,7 +17,10 @@
     <main>
         <h2>Données en direct de la Station météo</h2>
         <section class="meteo-grid">
-            <div class="meteo-bloc" id="temperature">Température : ...</div>
+            <div class="meteo-bloc" id="temperature">
+                <div class="bloc-titre">Température</div>
+                <div class="bloc-valeur" id="temperature-valeur">...</div>
+            </div>
             <div class="meteo-bloc" id="pression">Pression : ...</div>
             <div class="meteo-bloc" id="humidite">Humidité : ...</div>
             <div class="meteo-bloc" id="vent">Vent : ...</div>
@@ -31,6 +34,7 @@
     <script src="/js/header.js" defer></script>
     <script src="/js/menu.js" defer></script>
     <script src="/js/footer.js" defer></script>
+    <script src="/js/color.js" defer></script>
     <script src="/js/station-meteo.js" defer></script>
 </body>
 </html>
