--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -16,17 +16,32 @@
 
     <main>
         <h2>Données en direct de la Station météo</h2>
-        <section class="meteo-grid">
+        <div class="meteo-grille">
             <div class="meteo-bloc" id="temperature">
                 <div class="bloc-titre">Température</div>
                 <div class="bloc-valeur" id="temperature-valeur">...</div>
             </div>
-            <div class="meteo-bloc" id="pression">Pression : ...</div>
-            <div class="meteo-bloc" id="humidite">Humidité : ...</div>
-            <div class="meteo-bloc" id="vent">Vent : ...</div>
-            <div class="meteo-bloc" id="lumiere">Lumière : ...</div>
-            <div class="meteo-bloc" id="pluie">Pluviométrie : ...</div>
-        </section>
+            <div class="meteo-bloc" id="pression">
+                <div class="bloc-titre">Pression</div>
+                <div class="bloc-valeur" id="pression-valeur">...</div>
+            </div>
+            <div class="meteo-bloc" id="humidite">
+                <div class="bloc-titre">Humidité</div>
+                <div class="bloc-valeur" id="humidite-valeur">...</div>
+            </div>
+            <div class="meteo-bloc" id="vent">
+                <div class="bloc-titre">Vent</div>
+                <div class="bloc-valeur" id="vent-valeur">...</div>
+            </div>
+            <div class="meteo-bloc" id="lumiere">
+                <div class="bloc-titre">Lumière</div>
+                <div class="bloc-valeur" id="lumiere-valeur">...</div>
+            </div>
+            <div class="meteo-bloc" id="pluie">
+                <div class="bloc-titre">Pluviométrie</div>
+                <div class="bloc-valeur" id="pluie-valeur">...</div>
+            </div>
+        </div>
     </main>
 
     <div id="footer-container"></div>
