--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -31,8 +31,17 @@
             </div>
             <div class="meteo-bloc" id="vent">
                 <div class="bloc-titre">Vent</div>
-                <div class="bloc-valeur" id="vent-valeur">...</div>
-            </div>
+                <div class="wind-rose">
+                  <div class="wind-pointer" id="wind-arrow"></div>
+                  <div class="wind-center">
+                    <div id="vent-valeur"></div>
+                  </div>
+                  <div class="wind-label north">N</div>
+                  <div class="wind-label east">E</div>
+                  <div class="wind-label south">S</div>
+                  <div class="wind-label west">O</div>
+                </div>
+              </div>
             <div class="meteo-bloc" id="lumiere">
                 <div class="bloc-titre">Lumière</div>
                 <div class="bloc-valeur" id="lumiere-valeur">...</div>
