--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -15,7 +15,7 @@
     <nav id="menu-container"></nav>
 
     <main>
-        <h2>Données en direct de la Station météo</h2>
+        <h2>Données en direct de la station météo</h2>
         <div class="meteo-grille">
             <div class="meteo-bloc" id="temperature">
                 <div class="bloc-titre">Température</div>
