--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -62,6 +62,7 @@
     <script src="/js/color.js" defer></script>
     <script src="/js/vigilance.js" defer></script>
     <script src="/js/icon.js" defer></script>
+    <script src="/js/station_meteo.js" defer></script>
     <script src="/js/api_meteo.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
     <script src="/js/footer.js" defer></script>
