--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -51,6 +51,8 @@
                 <div class="bloc-valeur" id="pluie-valeur">...</div>
             </div>
         </div>
+
+        <canvas id="temperatureChart" width="400" height="200"></canvas>
     </main>
 
     <div id="footer-container"></div>
