--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -52,7 +52,7 @@
             </div>
         </div>
 
-        <canvas id="temperatureChart" width="400" height="200"></canvas>
+        <canvas id="temperatureChart" class="chart-weather-station"></canvas>
     </main>
 
     <div id="footer-container"></div>
