--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -53,6 +53,7 @@
         </div>
 
         <canvas id="temperatureChart" class="chart-weather-station"></canvas>
+        <canvas id="humidityChart" class="chart-weather-station"></canvas>
     </main>
 
     <div id="footer-container"></div>
