--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -54,6 +54,7 @@
 
         <canvas id="temperatureChart" class="chart-weather-station"></canvas>
         <canvas id="humidityChart" class="chart-weather-station"></canvas>
+        <canvas id="pressureChart" class="chart-weather-station"></canvas>
     </main>
 
     <div id="footer-container"></div>
