--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -43,7 +43,10 @@
               </div>
             <div class="meteo-bloc" id="lumiere">
                 <div class="bloc-titre">Lumière</div>
-                <div class="bloc-valeur" id="lumiere-valeur">...</div>
+                <div id="lumiere-valeur-nombre"></div>
+                <div class="uv-bar-container">
+                    <div id="uv-bar" class="uv-bar-fill"></div>
+                </div>
             </div>
             <div class="meteo-bloc" id="pluie">
                 <div class="bloc-titre">Pluviométrie</div>
