--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -43,7 +43,7 @@
               </div>
             <div class="meteo-bloc" id="lumiere">
                 <div class="bloc-titre">Lumière</div>
-                <div id="lumiere-valeur-nombre"></div>
+                <div id="lumiere-valeur-nombre" class="bloc-valeur"></div>
                 <div class="uv-bar-container">
                     <div id="uv-bar" class="uv-bar-fill"></div>
                 </div>
