--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -44,9 +44,14 @@
             <div class="meteo-bloc" id="lumiere">
                 <div class="bloc-titre">Lumière</div>
                 <div id="lumiere-valeur-nombre" class="bloc-valeur"></div>
-                <div class="uv-bar-container">
-                    <div id="uv-bar" class="uv-bar-fill"></div>
-                </div>
+                <div class="uv-container">
+                    <div class="uv-labels">
+                      <span>0</span><span>2</span><span>4</span><span>6</span><span>8</span><span>10+</span>
+                    </div>
+                    <div class="uv-bar">
+                      <div class="uv-bar-fill" id="uvBar"></div>
+                    </div>
+                  </div>
             </div>
             <div class="meteo-bloc" id="pluie">
                 <div class="bloc-titre">Pluviométrie</div>
