--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -48,8 +48,8 @@
                     <div class="uv-labels">
                       <span>0</span><span>2</span><span>4</span><span>6</span><span>8</span><span>10+</span>
                     </div>
-                    <div class="uv-bar">
-                      <div class="uv-bar-fill" id="uvBar"></div>
+                    <div class="uv-bar-container">
+                      <div class="uv-bar-fill" id="uv-bar"></div>
                     </div>
                   </div>
             </div>
