--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -62,6 +62,7 @@
         <canvas id="temperatureChart" class="chart-weather-station"></canvas>
         <canvas id="humidityChart" class="chart-weather-station"></canvas>
         <canvas id="pressureChart" class="chart-weather-station"></canvas>
+        <canvas id="rainChart" class="chart-weather-station"></canvas>
     </main>
 
     <div id="footer-container"></div>
