--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -15,7 +15,7 @@
 
     <main>
         <h2>Données en direct de la station météo</h2>
-        <p id="update">Dernière mise à jour : </p>
+        <p id="update"></p>
         <div class="meteo-grille">
             <div class="meteo-bloc" id="temperature">
                 <div class="bloc-titre">Température</div>
