--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -32,7 +32,9 @@
             <div class="meteo-bloc" id="vent">
                 <div class="bloc-titre">Vent</div>
                 <div class="wind-rose">
-                  <div class="wind-pointer" id="wind-arrow"></div>
+                    <div class="wind-rotator">
+                        <div class="wind-pointer" id="wind-arrow"></div>
+                    </div>
                   <div class="wind-center">
                     <div id="vent-valeur"></div>
                   </div>
