--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -60,6 +60,8 @@
             </div>
         </div>
 
+        <div></div>
+
         <canvas id="temperatureChart" class="chart-weather-station"></canvas>
         <canvas id="humidityChart" class="chart-weather-station"></canvas>
         <canvas id="pressureChart" class="chart-weather-station"></canvas>
