historique jour semaine

--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -60,7 +60,11 @@
             </div>
         </div>
 
-        <div></div>
+        <label for="plage">Historique sur :</label>
+        <select id="plage" name="plage">
+            <option value="option1">journée</option>
+            <option value="option2">semaine</option>
+        </select>
 
         <canvas id="temperatureChart" class="chart-weather-station"></canvas>
         <canvas id="humidityChart" class="chart-weather-station"></canvas>
