historique jour semaine

--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -60,11 +60,13 @@
             </div>
         </div>
 
-        <label for="plage">Historique sur :</label>
-        <select id="plage" name="plage">
-            <option value="option1">journée</option>
-            <option value="option2">semaine</option>
-        </select>
+        <div id="form">
+            <label for="plage">Historique sur :</label>
+            <select id="plage" name="plage">
+                <option value="option1">journée</option>
+                <option value="option2">semaine</option>
+            </select>
+        </div>
 
         <canvas id="temperatureChart" class="chart-weather-station"></canvas>
         <canvas id="humidityChart" class="chart-weather-station"></canvas>
