--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -68,7 +68,7 @@
             </select>
         </div>
 
-        <div id="day-chart" style="display: none">
+        <div id="day-chart" style="display: block">
             <canvas id="temperatureChart" class="chart-weather-station"></canvas>
             <canvas id="humidityChart" class="chart-weather-station"></canvas>
             <canvas id="pressureChart" class="chart-weather-station"></canvas>
