--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -68,14 +68,14 @@
             </select>
         </div>
 
-        <div id="day-chart" style="display: block">
+        <div id="day-chart" style="display: none;">
             <canvas id="temperatureChart" class="chart-weather-station"></canvas>
             <canvas id="humidityChart" class="chart-weather-station"></canvas>
             <canvas id="pressureChart" class="chart-weather-station"></canvas>
             <canvas id="rainChart" class="chart-weather-station"></canvas>
         </div>
 
-        <div id="week-chart" style="display: none">
+        <div id="week-chart" style="display: none;">
         </div>
     </main>
 
