--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -69,13 +69,17 @@
         </div>
 
         <div id="day-chart" style="display: none;">
-            <canvas id="temperatureChart" class="chart-weather-station"></canvas>
-            <canvas id="humidityChart" class="chart-weather-station"></canvas>
-            <canvas id="pressureChart" class="chart-weather-station"></canvas>
-            <canvas id="rainChart" class="chart-weather-station"></canvas>
+            <canvas id="temperatureChartDay" class="chart-weather-station"></canvas>
+            <canvas id="humidityChartDay" class="chart-weather-station"></canvas>
+            <canvas id="pressureChartDay" class="chart-weather-station"></canvas>
+            <canvas id="rainChartDay" class="chart-weather-station"></canvas>
         </div>
 
         <div id="week-chart" style="display: none;">
+            <canvas id="temperatureChartWeek" class="chart-weather-station"></canvas>
+            <canvas id="humidityChartWeek" class="chart-weather-station"></canvas>
+            <canvas id="pressureChartWeek" class="chart-weather-station"></canvas>
+            <canvas id="rainChartWeek" class="chart-weather-station"></canvas>
         </div>
     </main>
 
