--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -85,6 +85,7 @@
 
     <div id="footer-container"></div>
 
+    <script src="/js/config.js" defer></script>
     <script src="/js/icon.js" defer></script>
     <script src="/js/header.js" defer></script>
     <script src="/js/menu.js" defer></script>
