--- a/pages/mentions-legales.html
+++ b/pages/mentions-legales.html
@@ -46,7 +46,7 @@
     <script src="/js/color.js" defer></script>
     <script src="/js/vigilance.js" defer></script>
     <script src="/js/station_meteo.js" defer></script>
-    <script src="/js/api_meteo.js" defer></script>
+    <script type="module" src="/js/api_meteo.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
     <script src="/js/footer.js" defer></script>
 </body>
