--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -68,14 +68,14 @@
             </select>
         </div>
 
-        <div id="day-chart" style="display: none;">
+        <div id="day-chart" style="display: block;">
             <canvas id="temperatureChartDay" class="chart-weather-station"></canvas>
             <canvas id="humidityChartDay" class="chart-weather-station"></canvas>
             <canvas id="pressureChartDay" class="chart-weather-station"></canvas>
             <canvas id="rainChartDay" class="chart-weather-station"></canvas>
         </div>
 
-        <div id="week-chart" style="display: none;">
+        <div id="week-chart" style="display: block;">
             <canvas id="temperatureChartWeek" class="chart-weather-station"></canvas>
             <canvas id="humidityChartWeek" class="chart-weather-station"></canvas>
             <canvas id="pressureChartWeek" class="chart-weather-station"></canvas>
@@ -85,7 +85,6 @@
 
     <div id="footer-container"></div>
 
-    <script src="/js/config.js" defer></script>
     <script src="/js/icon.js" defer></script>
     <script src="/js/header.js" defer></script>
     <script src="/js/menu.js" defer></script>
