--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -68,18 +68,19 @@
             </select>
         </div>
 
-        <div id="day-chart" style="display: block;">
-            <canvas id="temperatureChartDay" class="chart-weather-station"></canvas>
-            <canvas id="humidityChartDay" class="chart-weather-station"></canvas>
-            <canvas id="pressureChartDay" class="chart-weather-station"></canvas>
-            <canvas id="rainChartDay" class="chart-weather-station"></canvas>
-        </div>
-
-        <div id="week-chart" style="display: block;">
-            <canvas id="temperatureChartWeek" class="chart-weather-station"></canvas>
-            <canvas id="humidityChartWeek" class="chart-weather-station"></canvas>
-            <canvas id="pressureChartWeek" class="chart-weather-station"></canvas>
-            <canvas id="rainChartWeek" class="chart-weather-station"></canvas>
+        <div class ="chart-container">
+            <div id="day-chart" style="display: block;">
+                <canvas id="temperatureChartDay" class="chart-weather-station"></canvas>
+                <canvas id="humidityChartDay" class="chart-weather-station"></canvas>
+                <canvas id="pressureChartDay" class="chart-weather-station"></canvas>
+                <canvas id="rainChartDay" class="chart-weather-station"></canvas>
+            </div>
+            <div id="week-chart" style="display: block;">
+                <canvas id="temperatureChartWeek" class="chart-weather-station"></canvas>
+                <canvas id="humidityChartWeek" class="chart-weather-station"></canvas>
+                <canvas id="pressureChartWeek" class="chart-weather-station"></canvas>
+                <canvas id="rainChartWeek" class="chart-weather-station"></canvas>
+            </div>
         </div>
     </main>
 
