--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -44,7 +44,7 @@
               </div>
             <div class="meteo-bloc" id="lumiere">
                 <div class="bloc-titre">Lumière</div>
-                <div class="bloc-valeur">
+                <div class="uv-container">
                     <div class="uv-labels">
                       <span>0</span><span>2</span><span>4</span><span>6</span><span>8</span><span>10+</span>
                     </div>
