--- a/pages/marees.html
+++ b/pages/marees.html
@@ -15,6 +15,10 @@
 
     <main>
         <h2>Infos marées</h2>
+        <p id="tide1"></p>
+        <p id="tide2"></p>
+        <p id="tide3"></p>
+        <p id="tide4"></p>
     </main>
 
     <div id="footer-container"></div>
