--- a/pages/marees.html
+++ b/pages/marees.html
@@ -19,6 +19,14 @@
         <p id="tide2"></p>
         <p id="tide3"></p>
         <p id="tide4"></p>
+        <p id="tide5"></p>
+        <p id="tide6"></p>
+        <p id="tide7"></p>
+        <p id="tide8"></p>
+        <p id="tide9"></p>
+        <p id="tide10"></p>
+        <p id="tide11"></p>
+        <p id="tide12"></p>
     </main>
 
     <div id="footer-container"></div>
