--- a/pages/marees.html
+++ b/pages/marees.html
@@ -15,18 +15,16 @@
 
     <main>
         <h2>Infos marées</h2>
-        <p id="tide1"></p>
-        <p id="tide2"></p>
-        <p id="tide3"></p>
-        <p id="tide4"></p>
-        <p id="tide5"></p>
-        <p id="tide6"></p>
-        <p id="tide7"></p>
-        <p id="tide8"></p>
-        <p id="tide9"></p>
-        <p id="tide10"></p>
-        <p id="tide11"></p>
-        <p id="tide12"></p>
+        <table>
+            <thead>
+              <tr>
+                <th>Heure</th>
+                <th>Type</th>
+                <th>Hauteur (m)</th>
+              </tr>
+            </thead>
+            <tbody id="maree-table-body"></tbody>
+        </table>
     </main>
 
     <div id="footer-container"></div>
