--- a/pages/marees.html
+++ b/pages/marees.html
@@ -18,13 +18,14 @@
         <table>
             <thead>
               <tr>
+                <th>Jour</th>
                 <th>Heure</th>
                 <th>Type</th>
                 <th>Hauteur (m)</th>
               </tr>
             </thead>
             <tbody id="maree-table-body"></tbody>
-        </table>
+          </table>
     </main>
 
     <div id="footer-container"></div>
