--- a/pages/marees.html
+++ b/pages/marees.html
@@ -26,6 +26,8 @@
             </thead>
             <tbody id="maree-table-body"></tbody>
           </table>
+
+          <script src="https://services.data.shom.fr/hdm/vignette/grande/LE_CROISIC?locale=fr"></script>
     </main>
 
     <div id="footer-container"></div>
