--- a/pages/marees.html
+++ b/pages/marees.html
@@ -14,7 +14,10 @@
     <nav id="menu-container"></nav>
 
     <main>
-        <script src="https://services.data.shom.fr/hdm/vignette/grande/LE_CROISIC?locale=fr"></script>
+        <div id="tide-container">
+            <script src="https://services.data.shom.fr/hdm/vignette/grande/LE_CROISIC?locale=fr"></script>
+            <div class="overlay">⚠️ Vigilance</div>
+        </div>
     </main>
 
     <div id="footer-container"></div>
