--- a/pages/marees.html
+++ b/pages/marees.html
@@ -16,7 +16,7 @@
     <main>
         <div id="tide-container">
             <script src="https://services.data.shom.fr/hdm/vignette/grande/LE_CROISIC?locale=fr"></script>
-            <div class="overlay">⚠️ Vigilance</div>
+            <div class="barre-heure"></div>
         </div>
     </main>
 
