--- a/pages/marees.html
+++ b/pages/marees.html
@@ -16,7 +16,6 @@
     <main>
         <div id="tide-container">
             <script src="https://services.data.shom.fr/hdm/vignette/grande/LE_CROISIC?locale=fr"></script>
-            <div class="barre-heure"></div>
         </div>
     </main>
 
@@ -29,6 +28,7 @@
     <script src="/js/chart.js" defer></script>
     <script src="/js/color.js" defer></script>
     <script src="/js/vigilance.js" defer></script>
+    <script src="/js/tides.js" defer></script>
     <script src="/js/station_meteo.js" defer></script>
     <script src="/js/api_meteo.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
