--- a/pages/marees.html
+++ b/pages/marees.html
@@ -16,6 +16,7 @@
     <main>
         <div id="tide-container">
             <script src="https://services.data.shom.fr/hdm/vignette/grande/LE_CROISIC?locale=fr"></script>
+            <div id="timeline"></div>
         </div>
     </main>
 
