--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -89,8 +89,8 @@
     <script src="/js/menu.js" defer></script>
     <script src="/js/chart.js" defer></script>
     <script src="/js/color.js" defer></script>
+    <script src="/js/call-api.js" defer></script>
     <script src="/js/station_meteo.js" defer></script>
-    <script src="/js/api_meteo.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
     <script src="/js/footer.js" defer></script>
 </body>
