--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <main>
         <h2>Bienvenue sur le site météo du Croisic</h2>
         <p>Ici, vous trouverez toutes les informations météo locales en temps réel.</p>
+        <div id="logo-croisic">
+            <img src="../icons/logos/Le_Croisic_meteo.webp">
+        </div>
     </main>
 
     <div id="footer-container"></div>
