--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2>Bienvenue sur le site météo du Croisic</h2>
         <p>Ici, vous trouverez toutes les informations météo locales en temps réel.</p>
         <div id="logo-croisic">
-            <img src="../icons/logos/Le_Croisic_meteo.webp">
+            <img src="/icons/logos/Le_Croisic_meteo.webp">
         </div>
     </main>
 
