--- a/pages/marees.html
+++ b/pages/marees.html
@@ -15,7 +15,9 @@
 
     <main>
         <div id="tide-container">
-            <script src="https://services.data.shom.fr/hdm/vignette/grande/LE_CROISIC?locale=fr"></script>
+            <div class="shom-wrapper">
+                <script src="https://services.data.shom.fr/hdm/vignette/grande/LE_CROISIC?locale=fr"></script>
+            </div>
             <div id="timeline"></div>
         </div>
     </main>
