--- a/pages/marees.html
+++ b/pages/marees.html
@@ -15,10 +15,13 @@
 
     <main>
         <div id="tide-container">
-            <div class="shom-wrapper">
+            <div class="desktop-tides">
                 <script src="https://services.data.shom.fr/hdm/vignette/grande/LE_CROISIC?locale=fr"></script>
             </div>
-            <div id="timeline"></div>
+            <div class="mobile-tides">
+                <script src="https://services.data.shom.fr/hdm/vignette/petite/LE_CROISIC?locale=fr"></script>
+            </div>
+            <div id="timeline" class="desktop-tides"></div>
         </div>
     </main>
 
