--- a/pages/marees.html
+++ b/pages/marees.html
@@ -13,7 +13,7 @@
 
     <nav id="menu-container"></nav>
 
-    <main>
+    <main class="tides-main">
         <div id="tide-container">
             <div class="desktop-tides">
                 <script src="https://services.data.shom.fr/hdm/vignette/grande/LE_CROISIC?locale=fr"></script>
