--- a/pages/marees.html
+++ b/pages/marees.html
@@ -14,7 +14,7 @@
     <nav id="menu-container"></nav>
 
     <main class="tides-main">
-        <div id="tide-container">
+        <div id="tides-container">
             <div class="desktop-tides">
                 <script src="https://services.data.shom.fr/hdm/vignette/grande/LE_CROISIC?locale=fr"></script>
             </div>
