--- a/pages/marees.html
+++ b/pages/marees.html
@@ -18,7 +18,7 @@
             <div class="desktop-tides">
                 <script src="https://services.data.shom.fr/hdm/vignette/grande/LE_CROISIC?locale=fr"></script>
             </div>
-            <div class="mobile-tides">
+            <div id ="mobile-tides" class="mobile-tides">
                 <script src="https://services.data.shom.fr/hdm/vignette/petite/LE_CROISIC?locale=fr"></script>
             </div>
             <div id="timeline" class="desktop-tides"></div>
