responsive weather station

--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div class="meteo-bloc" id="pluie">
-                <div class="bloc-titre">Pluviométrie du jour</div>
+                <div id="rain-title" class="bloc-titre">Pluviométrie du jour</div>
                 <div class="bloc-valeur" id="pluie-valeur">...</div>
             </div>
         </div>
